...
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/theme_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/sample_button"/>

            <Button
                android:id="@+id/outlined_button"
                style="?attr/uikit_outlinedButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/theme_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
...
