...
    <string name="with_icon">With icon</string>
    <string name="extra_wide">Extra wide</string>
    <string name="disabled">Disabled</string>
    <string name="inline_validation">Inline</string>
    <string name="tooltip_validation">Tooltip</string>
    <string name="data_validation">Data Validation</string>
    <string name="buttons">Buttons</string>
    <string name="buttons_icon_only">Icon only buttons</string>
    <string name="buttons_circular">Circular buttons</string>
    <string name="buttons_text_left_aligned_category">Text left-aligned button</string>
    <string name="buttons_text_left_aligned">Text left aligned</string>
    <string name="buttons_text_primary">Primary button</string>
    <string name="buttons_text_secondary">Secondary button</string>
...
